Changed the about photo

--- a/assets/css/portifolio-styles.css
+++ b/assets/css/portifolio-styles.css
@@ -203,8 +203,8 @@ body{
 
 .about-image{
     border-radius: 5px;
-    filter: drop-shadow(0px 18px 20px black);
-    /* box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25); */
+    /* filter: drop-shadow(0px 18px 20px black);  */
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25); 
 }
 
 .about-para{
