--- a/assets/css/portifolio-styles.css
+++ b/assets/css/portifolio-styles.css
@@ -500,6 +500,9 @@ body{
     }
     .about-image{
         width: 90%;
+        left: 5%;
+        right: 5%;
+        transform: translate(-5%, -5%);
         margin: auto;
         display: block;
     }
