--- a/assets/css/portifolio-styles.css
+++ b/assets/css/portifolio-styles.css
@@ -11,7 +11,7 @@ body{
     width: 100%;
     font-family: 'roboto', sans-serif;
     position: relative;
-    background-color: rgb(245, 130, 92);
+    background-color: rgb(231, 109, 68);
     color: #fff;
     line-height: 1.5;  
 }
@@ -66,7 +66,8 @@ body{
     width: 5px;
     height: 5px;
     border-radius: 50%;
-    background: rgb(221, 91, 31);
+    background: rgb(25, 94, 11);
+    background: #03e9f4;
 }
 
 .link.active::after,
@@ -432,7 +433,7 @@ body{
       .home{
         flex-direction: column-reverse;
         height: fit-content;
-        padding-bottom: 50px;
+        padding-bottom: 20px;
     }
     .home .image{
         width: 250px;
@@ -522,8 +523,28 @@ body{
         margin-bottom: 20px !important;
     }
 }
-  
 
+
+  @media (max-width: 300px) {
+    img{
+        width: 220px !important;
+        height: 240px !important;
+    }
+    .about-me-container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .right-col{
+       
+        justify-content: center;
+        align-self: center;
+    }
+    .left-col{
+        width: 40%;
+        min-width: 230px !important;
+    }
+
+  }
 
 
 /* Scroll bar Styles */
